--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa954c24",
+   "id": "4e10c1ef",
    "metadata": {},
    "source": [
     "### Submap"
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8063a1c2",
+   "id": "b9801c54",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3eca53b7",
+   "id": "1f46044f",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8e1ec24f",
+   "id": "35584606",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5e6e6c34",
+   "id": "539b0f68",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8b89a940",
+   "id": "d3e341dc",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1477a0f",
+   "id": "d7729460",
    "metadata": {},
    "source": [
     "### Styling"
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e0fdb4dc",
+   "id": "c3a89ad9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a669fefe",
+   "id": "4f174db6",
    "metadata": {
     "scrolled": false
    },
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f0e98f2e",
+   "id": "3c2585e8",
    "metadata": {
     "scrolled": true
    },
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1f50fe4e",
+   "id": "3c7e54af",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2c98cc62",
+   "id": "b20cfb53",
    "metadata": {
     "scrolled": true
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c20640fb",
+   "id": "7a4ee3fb",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d3259bec",
+   "id": "35fe211a",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "da29901e",
+   "id": "cee5d6ed",
    "metadata": {},
    "outputs": [
     {
@@ -868,20 +868,17 @@
     }
    ],
    "source": [
-    "with open(\"my_style_sheet.css\", \"w\") as f:\n",
-    "    f.write(\n",
-    "        \"\"\"\n",
-    "        MacromoleculeLayout {\n",
-    "            stroke_width: 3;\n",
-    "            fill: red;\n",
-    "        }\n",
+    "s = \"\"\"\n",
+    "    MacromoleculeLayout {\n",
+    "        stroke_width: 3;\n",
+    "        fill: red;\n",
+    "    }\n",
     "    \n",
-    "        StateVariableLayout > TextLayout {\n",
-    "            font_color: green;\n",
-    "        }\n",
-    "        \"\"\"\n",
-    "    )\n",
-    "my_style_sheet = momapy.styling.read_file(\"my_style_sheet.css\")\n",
+    "    StateVariableLayout > TextLayout {\n",
+    "        font_color: green;\n",
+    "    }\n",
+    "    \"\"\"\n",
+    "my_style_sheet = momapy.styling.read_string(s)\n",
     "momapy.styling.apply_style_sheet(m1_builder.layout, my_style_sheet)\n",
     "display(m1_builder)"
    ]
@@ -889,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "131d51f6",
+   "id": "ce9e368e",
    "metadata": {
     "scrolled": false
    },
@@ -928,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6c68d695",
+   "id": "80aed3ce",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "09abdaf7",
+   "id": "302d86b2",
    "metadata": {},
    "outputs": [
     {
