--- a/momapy/demo/demo.ipynb
+++ b/momapy/demo/demo.ipynb
@@ -1296,7 +1296,9 @@
    "cell_type": "code",
    "execution_count": 56,
    "id": "42829f0f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1314,6 +1316,14 @@
     "c.label.position = c.label_center()\n",
     "display(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f8e82f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
