--- a/momapy/demo/demo.ipynb
+++ b/momapy/demo/demo.ipynb
@@ -131,7 +131,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "f2b75b47",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "29cc2990",
    "metadata": {},
    "outputs": [
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7853cd79",
    "metadata": {},
    "outputs": [],
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d573efa2",
    "metadata": {},
    "outputs": [
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "fc9e18cb",
    "metadata": {},
    "outputs": [],
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "280c61c8",
    "metadata": {
     "scrolled": false
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "fe7233ab",
    "metadata": {},
    "outputs": [
@@ -247,7 +249,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "026c3693",
    "metadata": {},
    "outputs": [
@@ -270,7 +272,7 @@
        "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "522d6429",
    "metadata": {},
    "outputs": [
@@ -293,7 +295,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "cb860b1b",
    "metadata": {},
    "outputs": [],
@@ -319,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "6e9c7832",
    "metadata": {},
    "outputs": [],
    "source": [
     "s = set([])\n",
     "for i in range(256):\n",
-    "    for j in range(0):\n",
+    "    for j in range(100):\n",
     "            m1_builder.layout.stroke = momapy.coloring.rgba(i, j, 0, 1.0)\n",
     "            s.add(m1_builder.build())\n",
     "l = list(s)"
@@ -334,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "c1a698dc",
    "metadata": {
     "scrolled": true
@@ -344,17 +346,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 180 µs, sys: 0 ns, total: 180 µs\n",
-      "Wall time: 193 µs\n"
+      "CPU times: user 372 µs, sys: 0 ns, total: 372 µs\n",
+      "Wall time: 384 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "9b263331",
    "metadata": {
     "scrolled": true
@@ -376,17 +378,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6 µs, sys: 2 µs, total: 8 µs\n",
-      "Wall time: 12.4 µs\n"
+      "CPU times: user 13.8 ms, sys: 13 µs, total: 13.8 ms\n",
+      "Wall time: 13.7 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "7458590e",
    "metadata": {},
    "outputs": [
@@ -421,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "f9495f59",
    "metadata": {
     "scrolled": true
@@ -449,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "5fb89bf9",
    "metadata": {},
    "outputs": [
@@ -459,7 +461,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,29 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "eb562fbb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m1.is_submap(m2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
-   "id": "75aca933",
+   "id": "eb562fbb",
    "metadata": {},
    "outputs": [
     {
@@ -507,12 +488,33 @@
     }
    ],
    "source": [
-    "m1.model.is_submodel(m2.model)"
+    "m1.is_submap(m2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "75aca933",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1.model.is_submodel(m2.model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "6dda91e5",
    "metadata": {
     "scrolled": false
@@ -526,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "d18b5385",
    "metadata": {
     "scrolled": false
@@ -549,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "fd3ac6fa",
    "metadata": {
     "scrolled": true
@@ -573,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "89c8cfab",
    "metadata": {},
    "outputs": [
@@ -596,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "18772982",
    "metadata": {},
    "outputs": [
@@ -618,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "30a69034",
    "metadata": {
     "scrolled": false
@@ -643,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "4f4c17ae",
    "metadata": {
     "scrolled": false
@@ -667,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "84a98dbf",
    "metadata": {
     "scrolled": false
@@ -691,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "59986209",
    "metadata": {
     "scrolled": true
@@ -726,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "2050c913",
    "metadata": {
     "scrolled": false
@@ -754,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "bc80f94e",
    "metadata": {
     "scrolled": false
@@ -774,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "bb2c1ead",
    "metadata": {
     "scrolled": false
@@ -786,7 +788,7 @@
        "Point(x=81.01790055165266, y=78.00895027582632)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "9b732df0",
    "metadata": {
     "scrolled": false
@@ -847,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "6ddacee6",
    "metadata": {},
    "outputs": [
@@ -868,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "b26c1842",
    "metadata": {
     "scrolled": true
@@ -891,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "ed8874a8",
    "metadata": {
     "scrolled": true
@@ -914,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "2edadf5a",
    "metadata": {
     "scrolled": false
@@ -926,7 +928,7 @@
        "Point(x=181.69872981077808, y=75.0)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "de20bb04",
    "metadata": {
     "scrolled": true
@@ -961,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "b99cf9f8",
    "metadata": {},
    "outputs": [],
@@ -972,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "98c243d4",
    "metadata": {
     "scrolled": false
@@ -1003,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "id": "b4b6706f",
    "metadata": {
     "scrolled": false
@@ -1027,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "6259a0c0",
    "metadata": {
     "scrolled": false
@@ -1050,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "608f035c",
    "metadata": {
     "scrolled": false
@@ -1081,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "7b9b4ea5",
    "metadata": {
     "scrolled": true
@@ -1093,7 +1095,7 @@
        "(Point(x=155.0, y=163.0), 5.785842590832764)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "59801727",
    "metadata": {
     "scrolled": true
@@ -1129,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "43e94d33",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "f65c42be",
    "metadata": {
     "scrolled": true
@@ -1171,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "c0b12481",
    "metadata": {
     "scrolled": true
@@ -1201,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "42829f0f",
    "metadata": {
     "scrolled": false
@@ -1226,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "188f5cca",
    "metadata": {},
    "outputs": [],
@@ -1245,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "id": "a79b98ea",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "id": "2b08e972",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
