--- a/momapy/demo/demo.ipynb
+++ b/momapy/demo/demo.ipynb
@@ -345,8 +345,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 285 µs, sys: 84 µs, total: 369 µs\n",
-      "Wall time: 373 µs\n"
+      "CPU times: user 317 µs, sys: 86 µs, total: 403 µs\n",
+      "Wall time: 409 µs\n"
      ]
     },
     {
@@ -377,8 +377,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 582 µs, sys: 173 µs, total: 755 µs\n",
-      "Wall time: 760 µs\n"
+      "CPU times: user 8.55 ms, sys: 0 ns, total: 8.55 ms\n",
+      "Wall time: 8.6 ms\n"
      ]
     },
     {
